<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- defaultValues need to be in sync with the default kernel values! -->

	<PreferenceCategory
	android:title="@string/category_backlightdisable_title">
	    <!-- Backlight Disable Options -->
	    <CheckBoxPreference
	        android:key="backlight_disable"
	        android:title="@string/backlightdisable_title_head"
	        android:summary="@string/backlightdisable_summary_head"
	        android:defaultValue="0" />
	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_smartdimmer_title">
	    <!-- SmartDimmer Switch Options -->
	    <CheckBoxPreference
	        android:key="smartdimmer_switch"
	        android:title="@string/smartdimmer_switch_title_head"
	        android:summary="@string/smartdimmer_switch_summary_head"
	        android:defaultValue="1" />
	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_storage_title">
	<CheckBoxPreference 
		android:key="pref_switch_storage"	
		android:title="@string/pref_switch_storage_title"
		android:summaryOn="@string/pref_switch_storage_summary_on"
		android:summaryOff="@string/pref_switch_storage_summary_off" 
	/>
	</PreferenceCategory>

</PreferenceScreen>
